Fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,17 +1,14 @@
 header {
   background-color: white;
-  /*change color*/
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 4rem 2rem 4rem;
-  /*change size*/
+  padding: 1.5rem 4rem 1.5rem 4rem;
 }
 
 header h1 {
   font-size: 30px;
-  /*change size*/
-  text-align: center;
+  align-items: center;
   font-family: "Figtree", sans-serif;
   font-weight: 600;
 }
@@ -26,18 +23,16 @@ nav a {
   font-size: 16px;
   font-family: "Figtree", sans-serif;
   font-weight: 500;
-  padding: 3rem 0 2rem 4rem;
+  padding: 1.5rem 0 1.5rem 4rem;
   text-transform: uppercase;
   display: block;
   color: black;
-  /*change color*/
   text-decoration: none;
 }
 
 nav a:hover {
   color: #FC6C85;
   border-radius: 1rem;
-  /*change*/
 }
 
 main {
@@ -46,7 +41,6 @@ main {
 
 main h2 {
   font-size: 64px;
-  /*change size*/
   text-align: center;
   padding-bottom: 2rem;
   font-family: "Figtree", sans-serif;
@@ -60,6 +54,12 @@ main h2 {
   padding-left: 30%;
   padding-right: 30%;
   font-family: "Lato", sans-serif;
+}
+
+main a {
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
 }
 
 .intro {
@@ -78,16 +78,16 @@ main h2 {
   display: grid;
   justify-content: center;
   grid-template-columns: 67.286% 32.714%;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .grid2 {
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 6rem;
   display: grid;
   justify-content: center;
   grid-template-columns: 50% 50%;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 
@@ -96,8 +96,12 @@ main h2 {
   display: block;
 }
 
+.grid-image:hover {
+  transform: scale(1.01);
+}
+
 footer {
-  background-color: #ffd1df;
+  background-color: #FFE9EF;
   padding: 3rem;
   display: flex;
   justify-content: center;
@@ -115,13 +119,34 @@ footer a:hover {
   color: #F45082;
 }
 
+main h5 {
+  font-size: 64px;
+  padding-bottom: 2rem;
+  font-family: "Figtree", sans-serif;
+  font-weight: 600;
+  line-height: 5rem;
+}
+
 .bio {
   margin-top: 2rem;
   margin-bottom: 6rem;
   font-family: "Lato", sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   width: 50%;
-  line-height: 1.5rem;
+  line-height: 2rem;
+}
+
+.about-section {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 4rem;
+  padding-bottom: 6rem;
+}
+
+.me img {
+  width: 100%;
+  height: auto;
 }
 
 main h3 {
@@ -279,11 +304,11 @@ main video {
   }
 
   header h1 {
-    font-size: 2rem;
+    font-size: 30px;
     /*change size*/
     text-align: center;
-    font-family: "Freeman", sans-serif;
-    font-weight: 400;
+    font-family: "Figtree", sans-serif;
+    font-weight: 600;
   }
 
   nav ul {
@@ -317,12 +342,11 @@ main video {
   }
 
   main h2 {
-    font-size: 50px;
-    /*change size*/
+    font-size: 48px;
     text-align: center;
     padding-bottom: 2rem;
-    font-family: "Freeman", sans-serif;
-    font-weight: 400;
+    font-family: "Figree", sans-serif;
+    font-weight: 800;
     line-height: 3rem;
   }
 
@@ -341,7 +365,6 @@ main video {
   }
 
   .grid {
-    padding: .5rem auto;
     display: grid;
     grid-template-columns: 100%;
     gap: 1rem;
@@ -349,13 +372,13 @@ main video {
   }
 
   .grid2 {
-    padding: .5rem auto;
+    margin-top: 1rem;
+    margin-bottom: 6rem;
     display: grid;
     grid-template-columns: 100%;
     gap: 1rem;
     justify-content: center;
   }
-
 
   .grid-image img {
     width: 100%;
@@ -382,38 +405,59 @@ main video {
     color: #F45082;
   }
 
+  main h5 {
+    font-size: 48px;
+    padding-bottom: 1rem;
+    font-family: "Figtree", sans-serif;
+    font-weight: 600;
+    line-height: 3rem;
+  }
+
   .bio {
     margin-top: 2rem;
     margin-bottom: 6rem;
     font-family: "Lato", sans-serif;
-    font-size: 20px;
-    width: 50%;
-    line-height: 2rem;
+    font-size: 16px;
+    width: 75%;
+    line-height: 1.5rem;
+  }
+
+  .about-section {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: .5rem;
+    padding-bottom: 6rem;
+    flex-direction: column;
+  }
+
+  .me img {
+    width: 100%;
+    height: auto;
   }
 
   main h3 {
-    font-size: 48px;
-    padding-bottom: 2rem;
-    font-family: "Freeman", sans-serif;
-    font-weight: 400;
+    font-size: 32px;
+    font-family: "Figtree", sans-serif;
+    font-weight: 600;
     line-height: 3rem;
   }
 
   main h4 {
-    font-size: 32px;
+    font-size: 24px;
     padding-bottom: 1rem;
     padding-top: 2rem;
-    font-family: "Freeman", sans-serif;
-    font-weight: 100;
+    font-family: "Figtree", sans-serif;
+    font-weight: 600;
   }
 
   .projects {
     margin: 4rem auto 10rem auto;
     text-align: left;
     font-family: "Lato", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     max-width: 75%;
-    line-height: 2rem;
+    line-height: 1.5rem;
   }
 
   .cover {
@@ -462,17 +506,15 @@ main video {
   .title {
     margin: 0 auto 1rem auto;
     text-align: center;
-    font-family: "Lato", sans-serif;
-    font-size: 20px;
   }
 
   .content {
     margin: 0 auto 2rem auto;
     text-align: left;
     font-family: "Lato", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     max-width: 75%;
-    line-height: 2rem;
+    line-height: 1.5rem;
   }
 
   .logo {
